Bug 92815 - check for NULL if failed in memory allocation
Summary: check for NULL if failed in memory allocation
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-04 12:25 UTC by Pankaj
Modified: 2016-12-13 14:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
p11-kit-0.23.1-proxy-001 patch (472 bytes, text/plain)
2015-11-04 12:25 UTC, Pankaj
Details

Description Pankaj 2015-11-04 12:25:16 UTC
Created attachment 119401 [details]
p11-kit-0.23.1-proxy-001 patch

hi ,
There should be check for NULL if calloc() failed in allocation.
but it is rare case when calloc failed.

the patch has been attached ,please review it.

Thanks!
Pankaj Sharma


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.