proxy: Check return value of calloc()

https://bugs.freedesktop.org/show_bug.cgi?id=92815